# MuBot

./: .env.example  .gitignore  AGENTS.md  LICENSE  NATURAL_LANGUAGE_GUIDE.md  README.md  TESTING_GUIDE.md  auto_campaign.py  interactive_bot.py  mubot_chat_enhanced.py  pyproject.toml  schedule_followup.py
examples/: basic_usage.py
guides/: CUSTOMIZATION_GUIDE.md  FOLLOWUP_GUIDE.md  HOW_FOLLOWUPS_WORK.md  INTEGRATION_SETUP.md
integrations/: __init__.py  google_sheets.py  notion_integration.py
src/mubot/: __init__.py  cli.py  test_runner.py
src/mubot/agent/: __init__.py  core.py  nlp_interface.py  nlp_interface_enhanced.py  reasoning.py  safety.py  simple_cli.py
src/mubot/config/: __init__.py  prompts.py  prompts_followup.py  prompts_human.py  prompts_jd_enhanced.py  settings.py
src/mubot/memory/: __init__.py  manager.py  models.py  persistence.py
src/mubot/pipelines/: __init__.py  job_pipeline.py
src/mubot/scripts/: __init__.py  init_project.py  run_heartbeat.py
src/mubot/templates/: __init__.py  email_templates.py
src/mubot/tools/: __init__.py  gmail_client.py  rag_engine.py  scheduler.py
src/mubot/utils/: __init__.py  helpers.py  validators.py
tests/: __init__.py  test_memory.py
